// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trusted SDK bow graduation > matches every draw value and event across ten thousand independent legacy/platform ticks 1`] = `
{
  "events": [
    [
      0,
      "start",
    ],
    [
      44,
      "full",
    ],
    [
      524,
      "tired",
    ],
    [
      721,
      "start",
    ],
    [
      750,
      "letdown",
    ],
    [
      900,
      "start",
    ],
    [
      944,
      "full",
    ],
    [
      1424,
      "tired",
    ],
    [
      1621,
      "start",
    ],
    [
      1650,
      "letdown",
    ],
    [
      1800,
      "start",
    ],
    [
      1837,
      "full",
    ],
    [
      2521,
      "start",
    ],
    [
      2550,
      "letdown",
    ],
    [
      2700,
      "start",
    ],
    [
      2737,
      "full",
    ],
    [
      3217,
      "tired",
    ],
    [
      3421,
      "start",
    ],
    [
      3450,
      "letdown",
    ],
    [
      3600,
      "start",
    ],
    [
      3644,
      "full",
    ],
    [
      4321,
      "start",
    ],
    [
      4350,
      "letdown",
    ],
    [
      4500,
      "start",
    ],
    [
      4544,
      "full",
    ],
    [
      5024,
      "tired",
    ],
    [
      5221,
      "start",
    ],
    [
      5250,
      "letdown",
    ],
    [
      5400,
      "start",
    ],
    [
      5437,
      "full",
    ],
    [
      5917,
      "tired",
    ],
    [
      6121,
      "start",
    ],
    [
      6150,
      "letdown",
    ],
    [
      6300,
      "start",
    ],
    [
      6337,
      "full",
    ],
    [
      6817,
      "tired",
    ],
    [
      7021,
      "start",
    ],
    [
      7050,
      "letdown",
    ],
    [
      7200,
      "start",
    ],
    [
      7244,
      "full",
    ],
    [
      7724,
      "tired",
    ],
    [
      7921,
      "start",
    ],
    [
      7950,
      "letdown",
    ],
    [
      8100,
      "start",
    ],
    [
      8144,
      "full",
    ],
    [
      8821,
      "start",
    ],
    [
      8850,
      "letdown",
    ],
    [
      9000,
      "start",
    ],
    [
      9037,
      "full",
    ],
    [
      9517,
      "tired",
    ],
    [
      9721,
      "start",
    ],
    [
      9750,
      "letdown",
    ],
    [
      9900,
      "start",
    ],
    [
      9937,
      "full",
    ],
  ],
  "hash": 1648609380,
  "ticks": 10000,
}
`;

exports[`trusted SDK bow graduation > preserves live view transforms, input defaults, mounted draw and launch edges (portrait=false) 1`] = `
{
  "ammo": 21,
  "context": "weapon.bow",
  "edges": [
    "draw",
    "full",
    "loose",
    "draw",
    "full",
    "loose",
    "draw",
    "full",
    "loose",
    "draw",
    "full",
  ],
  "frames": 600,
  "hash": 3352883794,
  "launches": [
    [
      -0.075827,
      1.732287,
      -0.542233,
      -7.996268,
      5.513858,
      -57.180915,
    ],
    [
      -0.259226,
      1.686445,
      -0.485037,
      -32.49026,
      0.67965,
      -57.268056,
    ],
    [
      -0.415529,
      1.615682,
      -0.35454,
      -48.973197,
      -6.782609,
      -43.50659,
    ],
  ],
  "style": "recurve",
}
`;

exports[`trusted SDK bow graduation > preserves live view transforms, input defaults, mounted draw and launch edges (portrait=true) 1`] = `
{
  "ammo": 21,
  "context": "weapon.bow",
  "edges": [
    "draw",
    "full",
    "loose",
    "draw",
    "full",
    "loose",
    "draw",
    "full",
    "loose",
    "draw",
    "full",
  ],
  "frames": 600,
  "hash": 1301548776,
  "launches": [
    [
      -0.075827,
      1.732287,
      -0.542233,
      -7.996268,
      5.513858,
      -57.180915,
    ],
    [
      -0.259226,
      1.686445,
      -0.485037,
      -32.49026,
      0.67965,
      -57.268056,
    ],
    [
      -0.415529,
      1.615682,
      -0.35454,
      -48.973197,
      -6.782609,
      -43.50659,
    ],
  ],
  "style": "recurve",
}
`;
